C1: operator delete needs an implementation

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b103

      We had fixed the ambiguous operator delete with JDK-8138890 some time ago. This is sufficient to get the product and fastdebug build working on AIX.

      Unfortunately, the slow debug build on AIX (with xlC version: 12.01) needs an implementation of the operators in addition:

      Linking vm...
      ld: 0711-317 ERROR: Undefined symbol: .LIRGenerator::operator delete(void*)
      ld: 0711-317 ERROR: Undefined symbol: .RangeCheckEliminator::Verification::operator delete(void*)

            Assignee:
            Martin Doerr
            Reporter:
            Martin Doerr
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: