8144850: C1: operator delete needs an implementation

Reviewed-by: kvn